[gd_scene load_steps=8 format=3 uid="uid://dabti1py4rn1a"]

[ext_resource type="Script" path="res://scripts/ui/drag/draggable_object.gd" id="1_sw81t"]
[ext_resource type="LabelSettings" uid="uid://corgcjje16a0i" path="res://assets/theme/tresfiles/element_label_settings.tres" id="3_lon1o"]
[ext_resource type="Shader" path="res://assets/shaders/outline.gdshader" id="3_vdtyu"]
[ext_resource type="Texture2D" uid="uid://jw8eotmm5j81" path="res://assets/sprites/misc/orb.png" id="4_ffuvr"]
[ext_resource type="Script" path="res://scripts/ui/drag/draggable_object_sprite.gd" id="6_jtics"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lqkb4"]
shader = ExtResource("3_vdtyu")
shader_parameter/line_color = Color(0.835294, 0.235294, 0.415686, 1)
shader_parameter/line_thickness = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7vtow"]
radius = 48.0

[node name="DraggableObject" type="Node2D"]
process_mode = 3
z_index = 5
script = ExtResource("1_sw81t")
metadata/_edit_vertical_guides_ = [50.0]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = -5
offset_left = -400.0
offset_top = -369.0
offset_right = 367.0
offset_bottom = 369.0
color = Color(0, 0, 0, 1)

[node name="ElementLabel" type="Label" parent="."]
z_index = 20
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -53.5
offset_right = 49.5
offset_bottom = -16.5
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("3_lon1o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObjectOrb" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lqkb4")
texture = ExtResource("4_ffuvr")

[node name="ObjectElement" type="Sprite2D" parent="ObjectOrb"]
script = ExtResource("6_jtics")

[node name="ObjectCollision" type="Area2D" parent="."]
z_index = 5
collision_layer = 129
collision_mask = 129

[node name="ObjectCollisionArea" type="CollisionShape2D" parent="ObjectCollision"]
shape = SubResource("CircleShape2D_7vtow")
debug_color = Color(0.703217, 0.292634, 0.549932, 0.065)

[connection signal="object_inserted" from="." to="." method="_on_object_inserted"]
[connection signal="body_entered" from="ObjectCollision" to="." method="_on_object_collision_body_entered"]
[connection signal="body_exited" from="ObjectCollision" to="." method="_on_object_collision_body_exited"]
[connection signal="mouse_entered" from="ObjectCollision" to="." method="_on_object_collision_mouse_entered"]
[connection signal="mouse_exited" from="ObjectCollision" to="." method="_on_object_collision_mouse_exited"]
[connection signal="mouse_shape_entered" from="ObjectCollision" to="." method="_on_object_collision_mouse_shape_entered"]
